# StockMatchingEngine

./: CMakeLists.txt  DESIGN.md  README.md
machine/include/: event.hpp  matching_engine.hpp  order.hpp  order_book.hpp  price_level.hpp  spsc_queue.hpp  symbol.hpp
machine/src/: matching_engine.cpp  order_book.cpp
